window: move geometry restore to new output on electric border maximize

Otherwise, unmaximizing the window will move it to a different screen than it's
currently on, which is confusing

BUG: 489488